--- a/FluxDeck/FDFlowViewController.xib
+++ b/FluxDeck/FDFlowViewController.xib
@@ -18,16 +18,16 @@
         <customObject id="-1" userLabel="First Responder" customClass="FirstResponder"/>
         <customObject id="-3" userLabel="Application"/>
         <customView wantsLayer="YES" id="eTG-xa-qa8" customClass="RBLView">
-            <rect key="frame" x="0.0" y="0.0" width="868.00000000000011" height="508"/>
+            <rect key="frame" x="0.0" y="0.0" width="800" height="600"/>
             <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
             <subviews>
                 <customView wantsLayer="YES" id="1ja-Tw-C6h" userLabel="Input View">
-                    <rect key="frame" x="0.0" y="0.0" width="670" height="42"/>
-                    <autoresizingMask key="autoresizingMask" widthSizable="YES" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                    <rect key="frame" x="0.0" y="0.0" width="612" height="42"/>
+                    <autoresizingMask key="autoresizingMask" flexibleMinX="YES" widthSizable="YES" flexibleMaxX="YES"/>
                     <subviews>
                         <textField verticalHuggingPriority="750" id="O8C-Fe-CsD">
-                            <rect key="frame" x="20" y="6" width="500" height="30"/>
-                            <autoresizingMask key="autoresizingMask" widthSizable="YES" flexibleMaxX="YES"/>
+                            <rect key="frame" x="20" y="6" width="441" height="30"/>
+                            <autoresizingMask key="autoresizingMask" widthSizable="YES"/>
                             <textFieldCell key="cell" scrollable="YES" lineBreakMode="clipping" selectable="YES" editable="YES" sendsActionOnEndEditing="YES" state="on" borderStyle="bezel" drawsBackground="YES" id="rwd-jE-P4n">
                                 <font key="font" metaFont="system"/>
                                 <color key="textColor" name="textColor" catalog="System" colorSpace="catalog"/>
@@ -38,7 +38,7 @@
                             </connections>
                         </textField>
                         <button id="dxN-Bg-fbh">
-                            <rect key="frame" x="584" y="5" width="78" height="32"/>
+                            <rect key="frame" x="531" y="5" width="73.000000000000028" height="32"/>
                             <autoresizingMask key="autoresizingMask" flexibleMinX="YES" widthSizable="YES"/>
                             <buttonCell key="cell" type="bevel" title="Send" bezelStyle="regularSquare" alignment="center" borderStyle="border" imageScaling="proportionallyDown" inset="2" id="kRO-Vd-0sF">
                                 <behavior key="behavior" pushIn="YES" lightByBackground="YES" lightByGray="YES"/>
@@ -46,7 +46,7 @@
                             </buttonCell>
                         </button>
                         <button id="ywN-5A-stm">
-                            <rect key="frame" x="519" y="6" width="30" height="30"/>
+                            <rect key="frame" x="473" y="6" width="27" height="30"/>
                             <autoresizingMask key="autoresizingMask" flexibleMinX="YES" widthSizable="YES" flexibleMaxX="YES"/>
                             <buttonCell key="cell" type="square" bezelStyle="shadowlessSquare" imagePosition="only" alignment="center" borderStyle="border" imageScaling="proportionallyDown" inset="2" id="pi3-aO-CvJ">
                                 <behavior key="behavior" pushIn="YES" lightByBackground="YES" lightByGray="YES"/>
@@ -54,7 +54,7 @@
                             </buttonCell>
                         </button>
                         <button id="IiK-ba-qdD">
-                            <rect key="frame" x="549" y="6" width="29" height="30"/>
+                            <rect key="frame" x="500" y="6" width="26" height="30"/>
                             <autoresizingMask key="autoresizingMask" flexibleMinX="YES" widthSizable="YES" flexibleMaxX="YES"/>
                             <buttonCell key="cell" type="square" bezelStyle="shadowlessSquare" imagePosition="only" alignment="center" borderStyle="border" imageScaling="proportionallyDown" inset="2" id="ws9-j3-zdy">
                                 <behavior key="behavior" pushIn="YES" lightByBackground="YES" lightByGray="YES"/>
@@ -64,24 +64,24 @@
                     </subviews>
                 </customView>
                 <customView wantsLayer="YES" id="x5I-et-Md4" userLabel="User View" customClass="RBLView">
-                    <rect key="frame" x="666" y="0.0" width="258" height="474"/>
-                    <autoresizingMask key="autoresizingMask" flexibleMinX="YES" widthSizable="YES" heightSizable="YES"/>
+                    <rect key="frame" x="599" y="-4" width="257" height="570"/>
+                    <autoresizingMask key="autoresizingMask" flexibleMinX="YES" heightSizable="YES"/>
                     <subviews>
                         <scrollView borderType="groove" autohidesScrollers="YES" horizontalLineScroll="19" horizontalPageScroll="10" verticalLineScroll="19" verticalPageScroll="10" hasHorizontalScroller="NO" usesPredominantAxisScrolling="NO" id="JkO-Qd-oI0">
-                            <rect key="frame" x="0.0" y="0.0" width="296" height="474"/>
+                            <rect key="frame" x="0.0" y="0.0" width="295" height="570"/>
                             <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                             <clipView key="contentView" id="FvO-Qx-y3k">
-                                <rect key="frame" x="2" y="2" width="292" height="470"/>
+                                <rect key="frame" x="2" y="2" width="291" height="566"/>
                                 <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                                 <subviews>
                                     <tableView verticalHuggingPriority="750" allowsExpansionToolTips="YES" columnAutoresizingStyle="lastColumnOnly" columnReordering="NO" columnSelection="YES" multipleSelection="NO" autosaveColumns="NO" rowSizeStyle="automatic" viewBased="YES" id="amG-0E-zMN" customClass="RBLTableView">
-                                        <rect key="frame" x="0.0" y="0.0" width="292" height="470"/>
+                                        <rect key="frame" x="0.0" y="0.0" width="291" height="566"/>
                                         <autoresizingMask key="autoresizingMask" flexibleMinX="YES" flexibleMaxX="YES" flexibleMinY="YES" flexibleMaxY="YES"/>
                                         <size key="intercellSpacing" width="3" height="2"/>
                                         <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                                         <color key="gridColor" name="gridColor" catalog="System" colorSpace="catalog"/>
                                         <tableColumns>
-                                            <tableColumn width="288.99999996274767" minWidth="40" maxWidth="1000" id="Bdu-MW-HEB">
+                                            <tableColumn width="287.99999996274767" minWidth="40" maxWidth="1000" id="Bdu-MW-HEB">
                                                 <tableHeaderCell key="headerCell" lineBreakMode="truncatingTail" borderStyle="border" alignment="left">
                                                     <font key="font" metaFont="smallSystem"/>
                                                     <color key="textColor" name="headerTextColor" catalog="System" colorSpace="catalog"/>
@@ -95,11 +95,11 @@
                                                 <tableColumnResizingMask key="resizingMask" resizeWithTable="YES" userResizable="YES"/>
                                                 <prototypeCellViews>
                                                     <tableCellView identifier="FDUserTableCellView" id="YvH-Zj-0xW" customClass="FDUserTableCellView">
-                                                        <rect key="frame" x="1" y="1" width="289" height="17"/>
+                                                        <rect key="frame" x="1" y="1" width="288" height="17"/>
                                                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                                                         <subviews>
                                                             <textField verticalHuggingPriority="750" horizontalCompressionResistancePriority="250" id="mT1-Vt-OFN">
-                                                                <rect key="frame" x="-24" y="-102" width="6" height="17"/>
+                                                                <rect key="frame" x="-25" y="-119" width="6" height="17"/>
                                                                 <autoresizingMask key="autoresizingMask" widthSizable="YES" flexibleMinY="YES"/>
                                                                 <textFieldCell key="cell" lineBreakMode="truncatingTail" sendsActionOnEndEditing="YES" title="Table View Cell" id="hp2-jU-gLX">
                                                                     <font key="font" metaFont="system"/>
@@ -135,7 +135,7 @@
                     </subviews>
                 </customView>
                 <customView wantsLayer="YES" id="dzE-dV-o8d" userLabel="Title View" customClass="FDTitleView">
-                    <rect key="frame" x="0.0" y="474" width="868.00000000000011" height="34"/>
+                    <rect key="frame" x="0.0" y="566" width="800" height="34"/>
                     <autoresizingMask key="autoresizingMask" widthSizable="YES" flexibleMinY="YES"/>
                     <subviews>
                         <textField horizontalHuggingPriority="251" verticalHuggingPriority="750" id="7ab-i0-1TE">
@@ -148,7 +148,7 @@
                             </textFieldCell>
                         </textField>
                         <searchField verticalHuggingPriority="750" id="r2O-zM-rbI">
-                            <rect key="frame" x="614.00000000000011" y="6" width="143" height="22"/>
+                            <rect key="frame" x="546" y="6" width="143" height="22"/>
                             <autoresizingMask key="autoresizingMask" flexibleMinX="YES"/>
                             <searchFieldCell key="cell" scrollable="YES" lineBreakMode="clipping" selectable="YES" editable="YES" borderStyle="bezel" usesSingleLineMode="YES" bezelStyle="round" id="YtD-jH-YYV">
                                 <font key="font" metaFont="system"/>
@@ -157,7 +157,7 @@
                             </searchFieldCell>
                         </searchField>
                         <popUpButton verticalHuggingPriority="750" id="UiS-KH-wC9">
-                            <rect key="frame" x="763.00000000000011" y="4" width="98" height="26"/>
+                            <rect key="frame" x="695" y="4" width="98" height="26"/>
                             <autoresizingMask key="autoresizingMask" flexibleMinX="YES" flexibleMinY="YES" flexibleMaxY="YES"/>
                             <popUpButtonCell key="cell" type="push" title="Item 1" bezelStyle="rounded" alignment="left" lineBreakMode="truncatingTail" state="on" borderStyle="borderAndBezel" imageScaling="proportionallyDown" inset="2" selectedItem="b4Q-mF-qcc" id="uNg-sR-Ptf">
                                 <behavior key="behavior" lightByBackground="YES" lightByGray="YES"/>
@@ -181,20 +181,20 @@
                     <animations/>
                 </customView>
                 <scrollView autohidesScrollers="YES" horizontalLineScroll="17" horizontalPageScroll="10" verticalLineScroll="17" verticalPageScroll="10" usesPredominantAxisScrolling="NO" id="rpF-gq-Qeg">
-                    <rect key="frame" x="0.0" y="41" width="668" height="432"/>
-                    <autoresizingMask key="autoresizingMask" flexibleMinX="YES" widthSizable="YES" flexibleMaxX="YES" flexibleMinY="YES" heightSizable="YES" flexibleMaxY="YES"/>
+                    <rect key="frame" x="1" y="42" width="598" height="524"/>
+                    <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                     <clipView key="contentView" id="HZQ-vd-DGI">
-                        <rect key="frame" x="1" y="1" width="666" height="430"/>
+                        <rect key="frame" x="1" y="1" width="596" height="522"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
                             <tableView verticalHuggingPriority="750" allowsExpansionToolTips="YES" columnAutoresizingStyle="lastColumnOnly" columnReordering="NO" columnSelection="YES" multipleSelection="NO" autosaveColumns="NO" rowSizeStyle="automatic" viewBased="YES" id="sc7-5W-hiz" customClass="RBLTableView">
-                                <rect key="frame" x="0.0" y="0.0" width="666" height="430"/>
+                                <rect key="frame" x="0.0" y="0.0" width="596" height="522"/>
                                 <autoresizingMask key="autoresizingMask"/>
                                 <size key="intercellSpacing" width="3" height="0.0"/>
                                 <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                                 <color key="gridColor" name="gridColor" catalog="System" colorSpace="catalog"/>
                                 <tableColumns>
-                                    <tableColumn width="663" minWidth="40" maxWidth="1000" id="paF-6f-hWM">
+                                    <tableColumn width="593" minWidth="40" maxWidth="1000" id="paF-6f-hWM">
                                         <tableHeaderCell key="headerCell" lineBreakMode="truncatingTail" borderStyle="border" alignment="left">
                                             <font key="font" metaFont="smallSystem"/>
                                             <color key="textColor" name="headerTextColor" catalog="System" colorSpace="catalog"/>
@@ -208,11 +208,11 @@
                                         <tableColumnResizingMask key="resizingMask" resizeWithTable="YES" userResizable="YES"/>
                                         <prototypeCellViews>
                                             <tableCellView id="NFI-vl-cME">
-                                                <rect key="frame" x="1" y="0.0" width="663" height="17"/>
+                                                <rect key="frame" x="1" y="0.0" width="593" height="17"/>
                                                 <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                                                 <subviews>
                                                     <textField verticalHuggingPriority="750" horizontalCompressionResistancePriority="250" id="U4I-Z5-r3e">
-                                                        <rect key="frame" x="0.0" y="-34" width="6" height="17"/>
+                                                        <rect key="frame" x="-1" y="-34" width="6" height="17"/>
                                                         <autoresizingMask key="autoresizingMask" widthSizable="YES" flexibleMinY="YES"/>
                                                         <textFieldCell key="cell" lineBreakMode="truncatingTail" sendsActionOnEndEditing="YES" title="Table View Cell" id="ca9-cG-ePl">
                                                             <font key="font" metaFont="system"/>
@@ -237,7 +237,7 @@
                         <color key="backgroundColor" name="controlBackgroundColor" catalog="System" colorSpace="catalog"/>
                     </clipView>
                     <scroller key="horizontalScroller" hidden="YES" verticalHuggingPriority="750" id="RMA-EH-k7W">
-                        <rect key="frame" x="1" y="119" width="223" height="15"/>
+                        <rect key="frame" x="1" y="415" width="664" height="16"/>
                         <autoresizingMask key="autoresizingMask"/>
                     </scroller>
                     <scroller key="verticalScroller" hidden="YES" verticalHuggingPriority="750" id="upb-h0-i69">
