--- a/FluxDeck/FDFlowViewController.xib
+++ b/FluxDeck/FDFlowViewController.xib
@@ -38,7 +38,7 @@
                             </connections>
                         </textField>
                         <button id="dxN-Bg-fbh">
-                            <rect key="frame" x="496" y="5" width="96.999999999999986" height="32"/>
+                            <rect key="frame" x="496" y="5" width="97" height="32"/>
                             <autoresizingMask key="autoresizingMask" flexibleMinX="YES" widthSizable="YES"/>
                             <buttonCell key="cell" type="bevel" title="Send" bezelStyle="regularSquare" alignment="center" borderStyle="border" imageScaling="proportionallyDown" inset="2" id="kRO-Vd-0sF">
                                 <behavior key="behavior" pushIn="YES" lightByBackground="YES" lightByGray="YES"/>
@@ -59,7 +59,7 @@
                     </subviews>
                 </customView>
                 <customView wantsLayer="YES" id="x5I-et-Md4" userLabel="User View" customClass="RBLView">
-                    <rect key="frame" x="599.00000000000011" y="-4" width="257" height="570"/>
+                    <rect key="frame" x="599" y="-4" width="257" height="570"/>
                     <autoresizingMask key="autoresizingMask" flexibleMinX="YES" heightSizable="YES"/>
                     <subviews>
                         <scrollView borderType="groove" autohidesScrollers="YES" horizontalLineScroll="19" horizontalPageScroll="10" verticalLineScroll="19" verticalPageScroll="10" hasHorizontalScroller="NO" usesPredominantAxisScrolling="NO" id="JkO-Qd-oI0">
@@ -70,7 +70,7 @@
                                 <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                                 <subviews>
                                     <tableView verticalHuggingPriority="750" allowsExpansionToolTips="YES" columnAutoresizingStyle="lastColumnOnly" columnReordering="NO" columnSelection="YES" multipleSelection="NO" autosaveColumns="NO" rowSizeStyle="automatic" viewBased="YES" id="amG-0E-zMN" customClass="RBLTableView">
-                                        <rect key="frame" x="-146" y="-283" width="291" height="566"/>
+                                        <rect key="frame" x="0.0" y="0.0" width="291" height="566"/>
                                         <autoresizingMask key="autoresizingMask" flexibleMinX="YES" flexibleMaxX="YES" flexibleMinY="YES" flexibleMaxY="YES"/>
                                         <size key="intercellSpacing" width="3" height="2"/>
                                         <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
@@ -90,11 +90,11 @@
                                                 <tableColumnResizingMask key="resizingMask" resizeWithTable="YES" userResizable="YES"/>
                                                 <prototypeCellViews>
                                                     <tableCellView identifier="FDUserTableCellView" id="YvH-Zj-0xW" customClass="FDUserTableCellView">
-                                                        <rect key="frame" x="1" y="1" width="287.99999999999977" height="17"/>
+                                                        <rect key="frame" x="1" y="1" width="288" height="17"/>
                                                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                                                         <subviews>
                                                             <textField verticalHuggingPriority="750" horizontalCompressionResistancePriority="250" id="mT1-Vt-OFN">
-                                                                <rect key="frame" x="-25" y="-153" width="6" height="17"/>
+                                                                <rect key="frame" x="-25" y="-170" width="6" height="17"/>
                                                                 <autoresizingMask key="autoresizingMask" widthSizable="YES" flexibleMinY="YES"/>
                                                                 <textFieldCell key="cell" lineBreakMode="truncatingTail" sendsActionOnEndEditing="YES" title="Table View Cell" id="hp2-jU-gLX">
                                                                     <font key="font" metaFont="system"/>
@@ -130,7 +130,7 @@
                     </subviews>
                 </customView>
                 <customView wantsLayer="YES" id="dzE-dV-o8d" userLabel="Title View" customClass="FDTitleView">
-                    <rect key="frame" x="0.0" y="566" width="800.00000000000011" height="34"/>
+                    <rect key="frame" x="0.0" y="566" width="800" height="34"/>
                     <autoresizingMask key="autoresizingMask" widthSizable="YES" flexibleMinY="YES"/>
                     <subviews>
                         <textField horizontalHuggingPriority="251" verticalHuggingPriority="750" id="7ab-i0-1TE">
@@ -143,7 +143,7 @@
                             </textFieldCell>
                         </textField>
                         <searchField verticalHuggingPriority="750" id="r2O-zM-rbI">
-                            <rect key="frame" x="546.00000000000011" y="6" width="143" height="22"/>
+                            <rect key="frame" x="546" y="6" width="143" height="22"/>
                             <autoresizingMask key="autoresizingMask" flexibleMinX="YES"/>
                             <searchFieldCell key="cell" scrollable="YES" lineBreakMode="clipping" selectable="YES" editable="YES" borderStyle="bezel" usesSingleLineMode="YES" bezelStyle="round" id="YtD-jH-YYV">
                                 <font key="font" metaFont="system"/>
@@ -152,7 +152,7 @@
                             </searchFieldCell>
                         </searchField>
                         <popUpButton verticalHuggingPriority="750" id="UiS-KH-wC9">
-                            <rect key="frame" x="695.00000000000011" y="4" width="98" height="26"/>
+                            <rect key="frame" x="695" y="4" width="98" height="26"/>
                             <autoresizingMask key="autoresizingMask" flexibleMinX="YES" flexibleMinY="YES" flexibleMaxY="YES"/>
                             <popUpButtonCell key="cell" type="push" title="Item 1" bezelStyle="rounded" alignment="left" lineBreakMode="truncatingTail" state="on" borderStyle="borderAndBezel" imageScaling="proportionallyDown" inset="2" selectedItem="b4Q-mF-qcc" id="uNg-sR-Ptf">
                                 <behavior key="behavior" lightByBackground="YES" lightByGray="YES"/>
@@ -176,13 +176,13 @@
                     <animations/>
                 </customView>
                 <scrollView autohidesScrollers="YES" horizontalLineScroll="17" horizontalPageScroll="10" verticalLineScroll="17" verticalPageScroll="10" usesPredominantAxisScrolling="NO" id="rpF-gq-Qeg">
-                    <rect key="frame" x="-1" y="42" width="600.00000000000011" height="524"/>
+                    <rect key="frame" x="-1" y="42" width="600" height="524"/>
                     <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                     <clipView key="contentView" id="HZQ-vd-DGI">
                         <rect key="frame" x="1" y="1" width="598" height="522"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
-                            <tableView verticalHuggingPriority="750" allowsExpansionToolTips="YES" columnAutoresizingStyle="lastColumnOnly" columnReordering="NO" columnSelection="YES" multipleSelection="NO" autosaveColumns="NO" rowSizeStyle="automatic" viewBased="YES" id="sc7-5W-hiz" customClass="RBLTableView">
+                            <tableView verticalHuggingPriority="750" allowsExpansionToolTips="YES" columnReordering="NO" columnSelection="YES" multipleSelection="NO" autosaveColumns="NO" rowSizeStyle="automatic" viewBased="YES" id="sc7-5W-hiz" customClass="RBLTableView">
                                 <rect key="frame" x="0.0" y="0.0" width="598" height="522"/>
                                 <autoresizingMask key="autoresizingMask"/>
                                 <size key="intercellSpacing" width="3" height="0.0"/>
@@ -195,7 +195,7 @@
                                             <color key="textColor" name="headerTextColor" catalog="System" colorSpace="catalog"/>
                                             <color key="backgroundColor" white="0.33333298560000002" alpha="1" colorSpace="calibratedWhite"/>
                                         </tableHeaderCell>
-                                        <textFieldCell key="dataCell" lineBreakMode="truncatingTail" selectable="YES" editable="YES" alignment="left" title="Text Cell" id="Mil-iA-twm">
+                                        <textFieldCell key="dataCell" lineBreakMode="truncatingTail" selectable="YES" editable="YES" continuous="YES" alignment="left" title="Text Cell" id="Mil-iA-twm">
                                             <font key="font" metaFont="system"/>
                                             <color key="textColor" name="controlTextColor" catalog="System" colorSpace="catalog"/>
                                             <color key="backgroundColor" name="controlBackgroundColor" catalog="System" colorSpace="catalog"/>
@@ -207,7 +207,7 @@
                                                 <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                                                 <subviews>
                                                     <textField verticalHuggingPriority="750" horizontalCompressionResistancePriority="250" id="U4I-Z5-r3e">
-                                                        <rect key="frame" x="-1" y="-68" width="6" height="17"/>
+                                                        <rect key="frame" x="-1" y="-85" width="6" height="17"/>
                                                         <autoresizingMask key="autoresizingMask" widthSizable="YES" flexibleMinY="YES"/>
                                                         <textFieldCell key="cell" lineBreakMode="truncatingTail" sendsActionOnEndEditing="YES" title="Table View Cell" id="ca9-cG-ePl">
                                                             <font key="font" metaFont="system"/>
